{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 28,
  "lineage": "6e94007f-052d-29cb-1874-e23596fcba07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788853553016:internet-gateway/igw-0d73eede4d5905089",
            "id": "igw-0d73eede4d5905089",
            "owner_id": "788853553016",
            "tags": {
              "Name": "Terraform"
            },
            "vpc_id": "vpc-06855ccd06e731c1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08437357b26215344",
            "owner_id": "788853553016",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d73eede4d5905089",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Private"
            },
            "vpc_id": "vpc-06855ccd06e731c1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-022309a3eb5467edd",
            "owner_id": "788853553016",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d73eede4d5905089",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Public"
            },
            "vpc_id": "vpc-06855ccd06e731c1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a5ec151578b879b",
            "route_table_id": "rtb-08437357b26215344",
            "subnet_id": "subnet-0c2a971d39777b24c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_private",
            "aws_subnet.private_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ad2c04b317af1d",
            "route_table_id": "rtb-08437357b26215344",
            "subnet_id": "subnet-04d0de07e6d982526"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_private",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d6e2bd4351760ac",
            "route_table_id": "rtb-022309a3eb5467edd",
            "subnet_id": "subnet-0d1d52577d362f70a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000900d36b77a838e",
            "route_table_id": "rtb-022309a3eb5467edd",
            "subnet_id": "subnet-0d0ab1472ea18ea25"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt_public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788853553016:subnet/subnet-0c2a971d39777b24c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-0c2a971d39777b24c",
            "map_public_ip_on_launch": false,
            "owner_id": "788853553016",
            "tags": {
              "Name": "Private 1a"
            },
            "vpc_id": "vpc-06855ccd06e731c1a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788853553016:subnet/subnet-04d0de07e6d982526",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-04d0de07e6d982526",
            "map_public_ip_on_launch": false,
            "owner_id": "788853553016",
            "tags": {
              "Name": "Private 1b"
            },
            "vpc_id": "vpc-06855ccd06e731c1a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788853553016:subnet/subnet-0d1d52577d362f70a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0d1d52577d362f70a",
            "map_public_ip_on_launch": false,
            "owner_id": "788853553016",
            "tags": {
              "Name": "public 1a"
            },
            "vpc_id": "vpc-06855ccd06e731c1a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788853553016:subnet/subnet-0d0ab1472ea18ea25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0d0ab1472ea18ea25",
            "map_public_ip_on_launch": false,
            "owner_id": "788853553016",
            "tags": {
              "Name": "Public 1b"
            },
            "vpc_id": "vpc-06855ccd06e731c1a"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:788853553016:vpc/vpc-06855ccd06e731c1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0645346f854c95806",
            "default_route_table_id": "rtb-06dfdb853a006db23",
            "default_security_group_id": "sg-0b6d907eb44cfc894",
            "dhcp_options_id": "dopt-9e89e1e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06855ccd06e731c1a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06dfdb853a006db23",
            "owner_id": "788853553016",
            "tags": {
              "Name": "Terraform"
            }
          }
        }
      ]
    }
  ]
}